--- a/package.json
+++ b/package.json
@@ -49,6 +49,10 @@
     "ts-node": "^10.9.1",
     "typechain": "^8.1.1",
     "typescript": "^4.9.3",
-    "walk-sync": "^3.0.0"
+    "walk-sync": "^3.0.0",
+    "@matterlabs/hardhat-zksync-deploy": "^0.6.1",
+    "@matterlabs/hardhat-zksync-solc": "^0.3.14",
+    "@matterlabs/hardhat-zksync-verify": "^0.1.2-beta.1",
+    "zksync-web3": "^0.13.4"
   }
 }
