--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@rmrk-team/evm-template",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "description": "Template for new projects using RMRK protocol on EVM",
   "scripts": {
     "test": "yarn typechain && hardhat test",
@@ -11,16 +11,17 @@
   "author": "@rmrk-team",
   "license": "Apache-2.0",
   "dependencies": {
-    "@rmrk-team/evm-contracts": "^1.1.0"
+    "@rmrk-team/evm-contracts": "^1.2.0"
   },
   "devDependencies": {
-    "@nomicfoundation/hardhat-chai-matchers": "^1.0.1",
-    "@nomicfoundation/hardhat-network-helpers": "^1.0.7",
-    "@nomicfoundation/hardhat-toolbox": "^1.0.2",
-    "@nomiclabs/hardhat-ethers": "^2.2.1",
-    "@nomiclabs/hardhat-etherscan": "^3.1.3",
+    "@nomicfoundation/hardhat-chai-matchers": "^1.0.6",
+    "@nomicfoundation/hardhat-network-helpers": "^1.0.8",
+    "@nomicfoundation/hardhat-toolbox": "^2.0.2",
+    "@nomiclabs/hardhat-ethers": "^2.2.2",
+    "@nomiclabs/hardhat-etherscan": "^3.1.7",
     "@openzeppelin/test-helpers": "^0.5.16",
-    "@primitivefi/hardhat-dodoc": "^0.2.3",
+    "@ethersproject/abi": "^5.7.0",
+    "@ethersproject/providers": "^5.7.2",
     "@typechain/ethers-v5": "^10.1.1",
     "@typechain/hardhat": "^6.1.4",
     "@types/chai": "^4.3.4",
@@ -38,11 +39,11 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-promise": "^6.1.1",
     "ethers": "^5.7.2",
-    "hardhat": "^2.12.3",
-    "hardhat-contract-sizer": "^2.6.1",
+    "hardhat": "^2.13.0",
+    "hardhat-contract-sizer": "^2.8.0",
     "hardhat-gas-reporter": "^1.0.9",
-    "prettier": "2.8.0",
-    "prettier-plugin-solidity": "^1.0.0",
+    "prettier": "2.8.3",
+    "prettier-plugin-solidity": "^1.1.3",
     "solc": "^0.8.18",
     "solhint": "^3.3.7",
     "solidity-coverage": "^0.8.2",
@@ -50,5 +51,8 @@
     "typechain": "^8.1.1",
     "typescript": "^4.9.3",
     "walk-sync": "^3.0.0"
+  },
+  "resolutions": {
+    "@solidity-parser/parser": "0.16.0"
   }
 }
