--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@rmrk-team/evm-template",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "Template for new projects using RMRK protocol on EVM",
   "scripts": {
     "test": "yarn typechain && hardhat test",
@@ -11,45 +11,47 @@
   "author": "@rmrk-team",
   "license": "Apache-2.0",
   "dependencies": {
-    "@rmrk-team/evm-contracts": "^1.2.1"
+    "@rmrk-team/evm-contracts": "^2.0.0"
   },
   "devDependencies": {
+    "@ethersproject/abi": "^5.4.7",
+    "@ethersproject/providers": "^5.4.7",
+    "@nomicfoundation/hardhat-verify": "^1.1.0",
     "@nomicfoundation/hardhat-chai-matchers": "^1.0.6",
     "@nomicfoundation/hardhat-network-helpers": "^1.0.8",
     "@nomicfoundation/hardhat-toolbox": "^2.0.2",
     "@nomiclabs/hardhat-ethers": "^2.2.2",
     "@nomiclabs/hardhat-etherscan": "^3.1.7",
     "@openzeppelin/test-helpers": "^0.5.16",
-    "@ethersproject/abi": "^5.7.0",
-    "@ethersproject/providers": "^5.7.2",
-    "@typechain/ethers-v5": "^10.1.1",
-    "@typechain/hardhat": "^6.1.4",
+    "@typechain/ethers-v5": "^10.2.0",
+    "@typechain/hardhat": "^6.1.5",
     "@types/chai": "^4.3.4",
     "@types/mocha": "^10.0.1",
-    "@types/node": "^18.11.10",
-    "@typescript-eslint/eslint-plugin": "^5.45.0",
-    "@typescript-eslint/parser": "^5.45.0",
-    "chai": "^4.3.6",
+    "@types/node": "^18.11.18",
+    "@typescript-eslint/eslint-plugin": "^5.49.0",
+    "@typescript-eslint/parser": "^5.49.0",
+    "chai": "^4.3.7",
     "dotenv": "^16.0.3",
-    "eslint": "^8.28.0",
-    "eslint-config-prettier": "^8.5.0",
+    "eslint": "8.33.0",
+    "eslint-config-prettier": "^8.6.0",
     "eslint-config-standard": "^17.0.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-n": "^15.5.1",
+    "eslint-import-resolver-typescript": "^3.5.3",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-n": "^15.6.1",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-promise": "^6.1.1",
     "ethers": "^5.7.2",
-    "hardhat": "^2.13.0",
-    "hardhat-contract-sizer": "^2.8.0",
+    "hardhat": "^2.17.0",
+    "hardhat-contract-sizer": "^2.10.0",
     "hardhat-gas-reporter": "^1.0.9",
     "prettier": "2.8.3",
     "prettier-plugin-solidity": "^1.1.3",
-    "solc": "^0.8.18",
-    "solhint": "^3.3.7",
-    "solidity-coverage": "^0.8.2",
+    "solc": "^0.8.21",
+    "solhint": "^3.4.0",
+    "solidity-coverage": "^0.8.4",
     "ts-node": "^10.9.1",
     "typechain": "^8.1.1",
-    "typescript": "^4.9.3",
+    "typescript": "^4.9.4",
     "walk-sync": "^3.0.0"
   },
   "resolutions": {
