--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
   "devDependencies": {
     "@ethersproject/abi": "^5.4.7",
     "@ethersproject/providers": "^5.4.7",
-    "@nomicfoundation/hardhat-verify": "^1.1.0",
     "@nomicfoundation/hardhat-chai-matchers": "^1.0.6",
     "@nomicfoundation/hardhat-network-helpers": "^1.0.8",
     "@nomicfoundation/hardhat-toolbox": "^2.0.2",
+    "@nomicfoundation/hardhat-verify": "^1.1.0",
     "@nomiclabs/hardhat-ethers": "^2.2.2",
     "@nomiclabs/hardhat-etherscan": "^3.1.7",
     "@openzeppelin/test-helpers": "^0.5.16",
@@ -43,6 +43,7 @@
     "ethers": "^5.7.2",
     "hardhat": "^2.17.0",
     "hardhat-contract-sizer": "^2.10.0",
+    "hardhat-deploy": "^0.11.43",
     "hardhat-gas-reporter": "^1.0.9",
     "prettier": "2.8.3",
     "prettier-plugin-solidity": "^1.1.3",
