--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,7 @@ SEPOLIA_URL=https://eth-sepolia.g.alchemy.com/v2/<YOUR ALCHEMY KEY>
 MUMBAI_URL=https://polygon-mumbai.g.alchemy.com/v2/<YOUR API KEY>
 BASE_GOERLI_URL=https://base-goerli.g.alchemy.com/v2/<YOUR API KEY>
 SHIBUYA_URL=
+ZKATANA_URL=
 
 # Mainnet networks
 MOONRIVER_URL=https://moonriver.blastapi.io/<YOUR ALCHEMY KEY>
@@ -12,6 +13,7 @@ ETHEREUM_URL=https://eth-mainnet.g.alchemy.com/v2/<YOUR ALCHEMY KEY>
 POLYGON_URL=https://polygon-mainnet.g.alchemy.com/v2/<YOUR API KEY>
 BASE_URL=https://base-mainnet.g.alchemy.com/v2/<YOUR API KEY>
 ASTAR_URL=
+BSC_URL=
 
 # To verify contracts
 ETHERSCAN_API_KEY=ABC123
@@ -19,6 +21,8 @@ MOONSCAN_APIKEY=ABC123
 POLYGONSCAN_API_KEY=ABC123
 BASESCAN_API_KEY=ABC123
 ASTAR_BLOCKSCOUT_API_KEY=ABC123
+ZKATANA_BLOCKSCOUT_API_KEY=ABC123
+BSCSCAN_API_KEY=ABC123
 
 # To report gas
 REPORT_GAS=
