--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@rmrk-team/evm-template",
-  "version": "2.0.0",
+  "version": "2.4.0",
   "description": "Template for new projects using RMRK protocol on EVM",
   "scripts": {
     "test": "yarn typechain && hardhat test",
@@ -11,50 +11,31 @@
   "author": "@rmrk-team",
   "license": "Apache-2.0",
   "dependencies": {
-    "@rmrk-team/evm-contracts": "^2.3.1"
+    "@rmrk-team/evm-contracts": "^2.4.0"
   },
   "devDependencies": {
-    "@ethersproject/abi": "^5.4.7",
-    "@ethersproject/providers": "^5.4.7",
-    "@nomicfoundation/hardhat-verify": "^1.1.0",
-    "@nomicfoundation/hardhat-chai-matchers": "^1.0.6",
-    "@nomicfoundation/hardhat-network-helpers": "^1.0.8",
-    "@nomicfoundation/hardhat-toolbox": "^2.0.2",
-    "@nomiclabs/hardhat-ethers": "^2.2.2",
-    "@nomiclabs/hardhat-etherscan": "^3.1.7",
-    "@openzeppelin/test-helpers": "^0.5.16",
-    "@typechain/ethers-v5": "^10.2.0",
-    "@typechain/hardhat": "^6.1.5",
-    "@types/chai": "^4.3.4",
-    "@types/mocha": "^10.0.1",
-    "@types/node": "^18.11.18",
-    "@typescript-eslint/eslint-plugin": "^5.49.0",
-    "@typescript-eslint/parser": "^5.49.0",
-    "chai": "^4.3.7",
-    "dotenv": "^16.0.3",
-    "eslint": "8.33.0",
-    "eslint-config-prettier": "^8.6.0",
-    "eslint-config-standard": "^17.0.0",
-    "eslint-import-resolver-typescript": "^3.5.3",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-n": "^15.6.1",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-promise": "^6.1.1",
-    "ethers": "^5.7.2",
-    "hardhat": "^2.17.0",
+    "@nomicfoundation/hardhat-chai-matchers": "^2.0.3",
+    "@nomicfoundation/hardhat-ethers": "^3.0.5",
+    "@nomicfoundation/hardhat-network-helpers": "^1.0.10",
+    "@nomicfoundation/hardhat-toolbox": "^4.0.0",
+    "@nomicfoundation/hardhat-verify": "^2.0.3",
+    "@openzeppelin/contracts": "^5.0.0",
+    "@primitivefi/hardhat-dodoc": "^0.2.3",
+    "@typechain/ethers-v6": "^0.5.1",
+    "@typechain/hardhat": "^9.1.0",
+    "@types/chai": "^4.3.11",
+    "@types/mocha": "^10.0.6",
+    "@types/node": "^20.10.8",
+    "chai": "^4.2.0",
+    "dotenv": "^16.3.1",
+    "ethers": "^6.9.2",
+    "hardhat": "^2.19.4",
     "hardhat-contract-sizer": "^2.10.0",
     "hardhat-gas-reporter": "^1.0.9",
-    "prettier": "2.8.3",
-    "prettier-plugin-solidity": "^1.1.3",
-    "solc": "^0.8.21",
-    "solhint": "^3.4.0",
-    "solidity-coverage": "^0.8.4",
-    "ts-node": "^10.9.1",
-    "typechain": "^8.1.1",
-    "typescript": "^4.9.4",
-    "walk-sync": "^3.0.0"
-  },
-  "resolutions": {
-    "@solidity-parser/parser": "0.16.0"
+    "solidity-coverage": "^0.8.6-sha1.0",
+    "squirrelly": "^8.0.8",
+    "ts-node": "^11.0.0-beta.1",
+    "typechain": "^8.3.2",
+    "typescript": "^5.3.3"
   }
 }
