--- a/package.json
+++ b/package.json
@@ -1,17 +1,60 @@
 {
   "name": "@rmrk-team/evm-template",
-  "version": "2.4.2",
+  "version": "2.4.3",
   "description": "Template for new projects using RMRK protocol on EVM",
   "scripts": {
-    "test": "yarn typechain && hardhat test",
+    "test": "hardhat typechain && hardhat test",
     "typechain": "hardhat typechain",
+    "deploy:catalog": "hardhat run scripts/run-deploy-catalog.ts",
+    "deploy:contracts": "hardhat run scripts/run-deploy.ts",
+    "deploy:utils": "hardhat run scripts/run-deploy-utils.ts",
     "prettier": "prettier --write ."
+  },
+  "engines": {
+    "node": ">=18"
   },
   "keywords": [],
   "author": "@rmrk-team",
   "license": "Apache-2.0",
   "dependencies": {
-    "@rmrk-team/evm-contracts": "^2.4.2"
+    "@rmrk-team/evm-contracts": "^2.4.3"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "@nomicfoundation/hardhat-chai-matchers": "^2.0.3",
+    "@nomicfoundation/hardhat-ethers": "^3.0.5",
+    "@nomicfoundation/hardhat-network-helpers": "^1.0.10",
+    "@nomicfoundation/hardhat-toolbox": "^4.0.0",
+    "@nomicfoundation/hardhat-verify": "^2.0.3",
+    "@openzeppelin/contracts": "^5.0.1",
+    "@primitivefi/hardhat-dodoc": "^0.2.3",
+    "@typechain/ethers-v6": "^0.5.1",
+    "@typechain/hardhat": "^9.1.0",
+    "@types/chai": "^4.3.11",
+    "@types/mocha": "^10.0.6",
+    "@types/node": "^20.11.7",
+    "@typescript-eslint/eslint-plugin": "^6.19.1",
+    "@typescript-eslint/parser": "^6.19.1",
+    "chai": "^4.4.1",
+    "dotenv": "^16.4.1",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-n": "^16.6.2",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-promise": "^6.1.1",
+    "ethers": "^6.10.0",
+    "hardhat": "^2.19.4",
+    "hardhat-contract-sizer": "^2.10.0",
+    "hardhat-gas-reporter": "^1.0.9",
+    "prettier": "^3.2.4",
+    "prettier-plugin-solidity": "^1.3.1",
+    "solc": "0.8.21",
+    "solidity-coverage": "0.8.6-sha1.0",
+    "squirrelly": "^8.0.8",
+    "ts-node": "11.0.0-beta.1",
+    "typechain": "^8.3.2",
+    "typescript": "^5.3.3"
+  }
 }
