--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,14 +3,14 @@
     "target": "ES2020",
     "module": "commonjs",
     "moduleResolution": "node",
-    "lib": ["es2020", "esnext"],
+    "lib": ["ES2020", "esnext", "dom"],
     "strict": true,
     "esModuleInterop": true,
     "outDir": "dist",
     "declaration": true,
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
   },
   "include": ["./scripts", "./test", "./typechain-types"],
   "exclude": ["node_modules", "dist"],
-  "files": ["./hardhat.config.ts"]
+  "files": ["./hardhat.config.ts"],
 }
