--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,7 @@
     "declaration": true,
     "resolveJsonModule": true,
   },
-  "include": ["./scripts", "./test", "./typechain-types"],
+  "include": ["./scripts", "./test", "./typechain-types", "./tasks"],
   "exclude": ["node_modules", "dist"],
   "files": ["./hardhat.config.ts"],
 }
