Adds Astar ZK configuration.

--- a/.env.example
+++ b/.env.example
@@ -22,6 +22,7 @@ MOONSCAN_APIKEY=ABC123
 POLYGONSCAN_API_KEY=ABC123
 BASESCAN_API_KEY=ABC123
 ASTAR_BLOCKSCOUT_API_KEY=ABC123
+ASTAR_ZK_API_KEY=ABC123
 ZKATANA_BLOCKSCOUT_API_KEY=ABC123
 BSCSCAN_API_KEY=ABC123
 
