--- a/.env.example
+++ b/.env.example
@@ -25,6 +25,7 @@ ASTAR_BLOCKSCOUT_API_KEY=ABC123
 ASTAR_ZK_API_KEY=ABC123
 ZKATANA_BLOCKSCOUT_API_KEY=ABC123
 BSCSCAN_API_KEY=ABC123
+BOBSCAN_APIKEY=ABC123
 
 # To report gas
 REPORT_GAS=
